# decent-ridesharing

./: .gitignore  .gitmodules  CMakeLists.txt  HunterConfig.cmake  README.md  setup-linux.sh  setup-win.bat  setup.py
sources/: Config.json
sources/Billing_App/: BillingApp.cpp  BillingApp.h  Main.cpp
sources/Billing_Enc/: DecentStates.cpp  Enclave.edl  EnclaveMain.cpp
sources/Common/: AppNames.h  Crypto.cpp  Crypto.h  MessageException.h  RideSharingFuncNums.h  RideSharingMessages.cpp  RideSharingMessages.h  RuntimeException.h  TlsConfig.cpp  TlsConfig.h  UnexpectedErrorException.h
sources/Common_App/: ConnectionManager.cpp  ConnectionManager.h  RequestCategory.h  RideShareApp.cpp  RideShareApp.h  RideSharingMessages.cpp  RideSharingMessages.h  Tools.cpp  Tools.h
sources/Common_Enc/: Connector.h  OperatorPayment.cpp  OperatorPayment.h  RideSharingMessages.cpp  ride_share.edl
sources/Driver/: Main.cpp
sources/DriverMgm_App/: DriverMgmApp.cpp  DriverMgmApp.h  Main.cpp
sources/DriverMgm_Enc/: Enclave.edl  EnclaveMain.cpp
sources/Passenger/: DecentStates.cpp  Main.cpp
sources/PassengerMgm_App/: Main.cpp  PassengerMgmApp.cpp  PassengerMgmApp.h
sources/PassengerMgm_Enc/: Enclave.edl  EnclaveMain.cpp  WhiteList.cpp
sources/Payment_App/: ConnectionManager.cpp  Main.cpp  PaymentApp.cpp  PaymentApp.h
sources/Payment_Enc/: Enclave.edl  EnclaveMain.cpp
sources/TripMatcher_App/: ConnectionManager.cpp  Main.cpp  TripMatcherApp.cpp  TripMatcherApp.h
sources/TripMatcher_Enc/: DecentStates.cpp  Enclave.edl  EnclaveMain.cpp  WhiteList.cpp
sources/TripPlaner_App/: ConnectionManager.cpp  Main.cpp  TripPlanerApp.cpp  TripPlanerApp.h  WhiteList.cpp
sources/TripPlaner_Enc/: Enclave.edl  EnclaveMain.cpp
